--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -57,8 +57,8 @@
    "source": [
     "protein = \"4jwk\"\n",
     "dxname=\"gist-dA\"\n",
-    "#path_dir_data = \"/hogehoge/\"\n",
-    "#path_pdb = path_dir_data + f\"{protein}.pdb\"\n",
+    "path_dir_data = \"/hogehoge/\"\n",
+    "path_pdb = path_dir_data + f\"{protein}.pdb\"\n",
     "\n",
     "# Voxelization of protein 3D structures\n",
     "a = Atoms()\n",
